syogesweb/static/css/main.css
.footer-social-item{
    width: 21px !important;
    height: 21px !important;
}
html,
body {
   margin:0;
   padding:0;
   height:100%;
}
#wrapper{
   min-height:100%;
   position:relative;
}
#header {
   background:#ff0;
   padding:10px;
}
#body {
   padding:10px;
   padding-bottom:60px;   /* Height of the footer */
}
#footer {
   position:absolute;
   bottom:0;
   width:100%;
   height:100px;   /* Height of the footer */
   background:transparent;
}

